--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
  
 </head>
 <body>
-    <h1 class="text-center">E-COMMERCE</h1>
+    <h1 class="text-center">E-C</h1>
     
     <div class="container-md">
         <div class="card text-bg-secondary mb-3 mt-5">
-            <div class="card-header">Inicio de sesion</div>
+            <div class="card-header"></div>
             <div class="card-body" >
                 <form action="./home.html" method="">
                     <div class="mb-3">
