--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
 </head>
 <body>
-    <h1 class="text-center">E-C</h1>
+    <h1 class="text-center">PRUEBA OK</h1>
     
     <div class="container-md">
         <div class="card text-bg-secondary mb-3 mt-5">
