--- a/paginas-privadas/home.html
+++ b/paginas-privadas/home.html
@@ -46,9 +46,15 @@
             </div>
 
         </div>
+
+        <h1 class="text-center my-3" style="background-color: white;">PROXIMAMENTE.. </h1>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4  my-4 mx-2 img-fondo" id="c-container">
+
+        </div>
         
 
     </div>
+    <script type="module" src="./home.js"></script>
     <script type="module" src="../index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
