--- a/paginas-publicas/login.html
+++ b/paginas-publicas/login.html
@@ -17,18 +17,18 @@
             <div class="card-body" >
                 <form action="../paginas-privadas/home.html" method="">
                     <div class="mb-3">
-                        <input type="email" name="email" placeholder="Email" class="form-control" required>
+                        <input type="email" name="email" placeholder="Email" class="form-control" id="user" required>
                     </div>
                     <div class="mb-3">
-                        <input type="password" name="pass" placeholder="Password" class="form-control" required>
+                        <input type="password" name="pass" placeholder="Password" id="password" class="form-control" required>
                     </div>
-                    
-                    <input type="submit" class="btn btn-dark ms-auto" role="submit" value="Ingresar">
+                    <input type="submit" class="btn btn-dark ms-auto" role="submit" value="Ingresar" id="btnIngresar">
                     <a class="btn btn-dark ms-auto" href="registro.html" role="button">Quiero registrarme</a>
                 </form>
             </div>
         </div>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <script src="../index.js"></script>
+        <script type="module" src="../index.js"></script>
 </body>
 </html>
