--- a/paginas-privadas/televisores/televisores.html
+++ b/paginas-privadas/televisores/televisores.html
@@ -19,11 +19,11 @@
     <h1 class="text-center"  id="Televisores">Televisores</h1>
 
         <!-- Toma 4 columnas hasta llegar a md (768px) luego toma lo que tiene por defecto (row-cols-1) -->
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4  my-4 mx-2 img-fondo" id="c-containerT">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4  my-4 mx-2 img-fondo" id="c-container">
     
         </div>
 
-        <script type="module" src="./../../categorias.js"></script>
+        <script type="module" src="./televisores.js"></script>
         <script type="module" src="../../index.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
