--- a/paginas-privadas/carrito/carrito.html
+++ b/paginas-privadas/carrito/carrito.html
@@ -13,13 +13,14 @@
 
 <h1 class="text-center"> Productos en carrito</h1>
 
-<div class="container-md" >
-  <table class="table table-bordered mt-5" >
-    <thead>
+<div class="container-sm" >
+  <table class="table table-bordered mt-5" style="width: 700px;">
+    <thead  >
         <tr>
-        <th scope="col">Nombre del producto</th>
+        <th scope="col" >Nombre del producto</th>
         <th scope="col">Precio</th>
         <th scope="col">Cantidad</th>
+        <th scope="col"></th>
         </tr>
     </thead>
     <tbody id="c-container">
