--- a/paginas-privadas/computadoras/computadoras.html
+++ b/paginas-privadas/computadoras/computadoras.html
@@ -13,7 +13,7 @@
 </header>
 
 <body>
-    <h1 class="text-center" id="Computadoras">Computadoras</h1>
+    <h1 class="text-center titulo" id="Computadoras">Computadoras</h1>
 
     <!-- Toma 4 columnas hasta llegar a md (768px) luego toma lo que tiene por defecto (row-cols-1) -->
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4  my-4 mx-2 img-fondo" id="c-container">
