--- a/paginas-privadas/celulares/celulares.html
+++ b/paginas-privadas/celulares/celulares.html
@@ -19,9 +19,8 @@
     
 
 
-    <script type="module" src="../../categorias.js"></script>
+    <script type="module" src="../categorias.js"></script>
     <script type="module" src="../../index.js"></script>
-    <script type="module" src="./celulares.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
