--- a/paginas-privadas/computadoras/computadoras.html
+++ b/paginas-privadas/computadoras/computadoras.html
@@ -21,8 +21,7 @@
 
     </div>
 
-    <script type="module" src="./../../categorias.js"></script>
-    <script type="module" src="./computadoras.js"></script>
+    <script type="module" src="../categorias.js"></script>
     <script type="module" src="../../index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
