--- a/paginas-privadas/carrito/carrito.html
+++ b/paginas-privadas/carrito/carrito.html
@@ -13,14 +13,14 @@
 
 <h1 class="text-center"> Productos en carrito</h1>
 
-<div class="container-sm" >
-  <table class="table table-bordered mt-5" style="width: 700px;">
+<div class="container-sm my-5" style="display: flex;align-items: center;justify-content: center;" >
+  <table class="table table-bordered" style="width: 700px;" >
     <thead  >
         <tr>
         <th scope="col" >Nombre del producto</th>
         <th scope="col">Precio</th>
-        <th scope="col">Cantidad</th>
-        <th scope="col"></th>
+        <th scope="col" >Cantidad</th>
+        <th scope="col" >Eliminar producto</th>
         </tr>
     </thead>
     <tbody id="c-container">
@@ -28,7 +28,8 @@
     </tbody>
 </table>     
 </div>
- 
+
+
 
 
     <div class="container-md"  id="idDatos">
