--- a/paginas-privadas/carrito/carrito.html
+++ b/paginas-privadas/carrito/carrito.html
@@ -11,16 +11,16 @@
 <header></header>
 <body>
 
-<h1 class="text-center"> Productos en carrito</h1>
+<h1 class="text-center bg-secondary text-white" style="border-radius:5px; margin-left: 565px; margin-right: 565px;"> Productos en carrito</h1>
 
-<div class="container-sm my-5" style="display: flex;align-items: center;justify-content: center;" >
-  <table class="table table-bordered" style="width: 700px;" >
+<div class="container-sm my-5 " style="display: flex;align-items: center;justify-content: center; " >
+  <table class="table table-bordered " style="width: 700px; " >
     <thead  >
         <tr>
-        <th scope="col" >Nombre del producto</th>
+        <th scope="col" >Nombre</th>
         <th scope="col">Precio</th>
         <th scope="col" >Cantidad</th>
-        <th scope="col" >Eliminar producto</th>
+        <th scope="col" >Eliminar</th>
         </tr>
     </thead>
     <tbody id="c-container">
