--- a/paginas-privadas/celulares/celulares.html
+++ b/paginas-privadas/celulares/celulares.html
@@ -12,7 +12,7 @@
 
 </header>
 <body>
-        <h1 class="text-center titulo" id="Celulares">Celulares</h1>
+        <h1 class="text-center titulo bg-secondary text-white" id="Celulares">Celulares</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4  my-4 mx-2 img-fondo" id="c-container"></div>              
 
     
