--- a/paginas-privadas/home.html
+++ b/paginas-privadas/home.html
@@ -47,7 +47,8 @@
 
         </div>
 
-        <h1 class="text-center my-3" style="background-color: white;" value="">PROXIMAMENTE.. </h1>
+            <h1 class="text-center my-3 bg-secondary text-white"  value="">PROXIMAMENTE.. </h1>
+
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4  my-4 mx-2 img-fondo" id="c-container">   
         </div>
         <button class="btn btn-success" id="carrito" onclick="  " >Añadir al carrito</button>  
