--- a/paginas-privadas/televisores/televisores.html
+++ b/paginas-privadas/televisores/televisores.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <h1  class="text-center titulo"  id="Televisores">Televisores</h1>
+    <h1  class="text-center titulo bg-secondary text-white"  id="Televisores">Televisores</h1>
 
         <!-- Toma 4 columnas hasta llegar a md (768px) luego toma lo que tiene por defecto (row-cols-1) -->
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4  my-4 mx-2 img-fondo" id="c-container">
