--- a/paginas-privadas/home.html
+++ b/paginas-privadas/home.html
@@ -13,6 +13,7 @@
 </header>
 
 <body class="img-fondo">
+<h1 hidden class="titulo" id="Home"></h1>
     <div class="container-fluid">
         <div class="row">
 
@@ -51,9 +52,9 @@
 
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4  my-4 mx-2 img-fondo" id="c-container">   
         </div>
-        <button class="btn btn-success" id="carrito" onclick="  " >Añadir al carrito</button>  
         
     </div>
+    <script type="module" src="./categorias.js"></script>
     <script type="module" src="./home.js"></script>
     <script type="module" src="../index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
