--- a/paginas-privadas/carrito/carrito.html
+++ b/paginas-privadas/carrito/carrito.html
@@ -14,7 +14,7 @@
 <h1 class="text-center bg-secondary text-white" style="border-radius:5px; margin-left: 565px; margin-right: 565px;">Productos en carrito</h1>
 
 <div class="container-sm my-5 " style="display: flex;align-items: center;justify-content: center; " >
-  <table class="table table-bordered " style="width: 700px; " >
+  <table class="table table-hover table-light" style="width: 700px; " >
     <thead  >
         <tr>
         <th scope="col" >Nombre</th>
