--- a/paginas-privadas/carrito/carrito.html
+++ b/paginas-privadas/carrito/carrito.html
@@ -35,8 +35,9 @@
     <div class="container-md"  id="idDatos">
 
     </div>
+<footer class="bg-light text-dark py-3">
 
-
+</footer>
 <script type="module" src="./carro.js"></script>
 <script type="module" src="../../index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
