--- a/paginas-privadas/home.html
+++ b/paginas-privadas/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Home [E-Commerce]</title>
 </head>
@@ -54,6 +55,9 @@
         </div>
         
     </div>
+    <footer class="bg-light text-dark py-3">
+
+    </footer>
     <script type="module" src="./categorias.js"></script>
     <script type="module" src="./home.js"></script>
     <script type="module" src="../index.js"></script>
